# wespenstock

./: .dockerignore  .envrc  .gitignore  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  compose.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tests.sh
.github/workflows/: test.yaml
crs/: logger.py  main.py
crs/agents/: constants.py
crs/aixcc/: env.py  project_yaml.py  scripts.py  settings.py
crs/base/: agent_base.py  base_state.py  constants.py  context.py  conversation_metadata.py  exceptions.py  model_list.py  precontext.py  settings.py  util.py
crscommon/cmd_executor/: cmd_executor.py
crscommon/crash_report/: base.py  c.py  python.py
crscommon/editor/: editor.py  jedi_interface.py  language_helper.py  language_interface.py  lsp_interface.py  symbol.py  symbol_history.py  util.py  viewer.py
crscommon/lang_config/: config.py
crscommon/logging/: __main__.py  dump_config.py  (+2 more)
eval/: README.md  compile_commands.json  eval_inspect.py  eval_oss.py  evaluate_crs.py  graphs.py  inspect_eval.py  make_tex_table.py  parse_logs.py  run_data.yaml  setup_aixcc_nginx.py  table.py  webview.py
oss_fuzz_integration/: README.md  crawl_oss_issue.py  dataset_c.json  dataset_python.json  harness.py  init_CRS.sh  introspector_api.py  introspector_projects.json  prepare_project.py  run_replace.sh  search_for_0days.py
test/: conftest.py  setup_test_env.py  test_c_editor.py  test_c_helper.py  test_calltree.py  test_coverage_report.py  test_crash_report.py  test_jedi_editor.py  test_lsp.py  test_source_tools.py  test_verifier_agent.py
(+59 files in other folders)
